<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hope worldwide</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login"> Login</string>
    <string name="menu"> Home</string>
     <string name="myecd"> Search for ECD</string>
    <string name="username"> Username</string>
    <string name="password"> Password</string>

    <string name="name">Name: </string>
    <string name="height">Height (cm): </string>
    <string name="heightValue">Enter Height</string> <!-- height hint -->
    <string name="weight">Weight (kg): </string>
    <string name="weightHint">Enter Weight</string> <!-- weight hint -->
    <string name="mySearch">Search</string>
    <string name="logout">Logout</string>
    <string name="update">Update Child</string>
    <string name="bmiTitle">Child Information</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="birthDate">Date of Birth: </string>
    <string name="date">Date Taken: </string>
    <string name="ode">Odeama: </string>

    <string name="age">Age: </string>
    <string name="calculate">Calculate</string>
    <string name="currentBMI">Current BMI: </string>
    <string name="previousBMI">Previous BMI: </string>
     <string name="AutoCompleteTextView"></string>
     
     <string name="cm">cm</string>
      <string name="kg">kg</string>
       <string name="hopeworldwide">     \t\t Hope \n         World Wide</string>
       
       <string name="Login">Login</string> <!-- text in the login button -->
       <string name="login2">Login</string><!-- name of the login page  -->
       <string name="bmi">BMI Calculator</string> <!-- name of the page that calculate bmi -->
       
       <string name="landing">Hope World Wide</string>
       
       <!-- landing page buttons -->
        <string name="lButton1">BMI Calculator</string>
        <string name="lButton2">Add Child</string>
        <string name="lButton3">Synchronize Data</string>
        
        <string name="search">Enter Name</string>
        <string name="ecd">Enter ECD Name</string>
        <string name="ecd1">Search for ECD</string>
         <string name="autocompete">Auto complete</string>
         
         <string name="sync">Synchronize</string>
         
         <string name="updateC">Update Child</string>
         <string name="calc">BMI Calculator</string>
         <string name="addC">Add child</string>
         
         <string name="clogo">child logo</string>
         <string name="synclogo">sync logo</string>
         <string name="calclogo">calc logo</string>
         <string name="addlogo">add logo</string>
         <string name="logoutlogo">logout logo</string>  
         <string name="updatelogo">update logo</string> 
         
           <string name="childname">Enter full name</string>
         <string name="dateOfBirth">Date of Birth</string>
         <string name="gender">Gender</string>
          <string name="odema">Odema</string>
          <string name="orphan">Orphan</string>
          
         <string name="yes">Yes</string>
         <string name="no">No</string>
         
          <string name="male">Male</string>
         <string name="female">Female</string>
         <string name="selectd">Select Date</string>
         <string name="addChild">Add New Child</string>
      
</resources>
