<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:focusable="true"
    tools:context="com.example.hwwv2.MainActivity"
    tools:ignore="MergeRootFrame" >
    
     <TableRow 

    android:id="@+id/MyRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/name"
             android:textColor="#000000"
             android:textSize="20sp" />
    
        <EditText
        android:id="@+id/editText1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_weight="0"
        android:textSize="20sp" 
        android:ems="10"
        android:hint="@string/childname" />

</TableRow>

   
  <TableRow
     android:id="@+id/Row6"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <TextView
             android:id="@+id/textView19"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_weight="1"
             android:textSize="15sp" />

</TableRow>

 <TableRow 

    android:id="@+id/MyRow1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
         <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_weight="1"
        android:background="#1B9AF7"
        android:paddingBottom="3dp" />

</TableRow>

<TableRow 

    android:id="@+id/MyRow2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
         <TextView
        android:id="@+id/dateOfBirtth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOfBirth"
        android:layout_weight="1"
        android:textSize="20sp" 
        android:textColor="#000000" />
    
        <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="20sp"/>

</TableRow>

 <TableRow
     android:id="@+id/MyRow3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:background="@android:color/transparent" >
    
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:background="@drawable/calculate"
             android:text="@string/selectd" />

</TableRow>

 <TableRow
     android:id="@+id/Row5"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <TextView
             android:id="@+id/textView31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:layout_weight="1"
             android:textSize="15sp" />

</TableRow>

  <TableRow
     android:id="@+id/MyRow4"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <View
        android:id="@+id/view5"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_weight="1"
        android:background="#1B9AF7"
        android:paddingBottom="3dp" />

</TableRow>

  
 
 
  <TableRow
     android:id="@+id/MyRow10"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <View
        android:id="@+id/view2"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_weight="1"
        android:background="#1B9AF7"
        android:paddingBottom="3dp" />

</TableRow>
 <TableRow 

    android:id="@+id/MyRow11"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
        <TextView
        android:id="@+id/gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:layout_weight="1"
        android:text="@string/gender"
        android:textColor="#000000" />
        
        
    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" 
            android:textColor="#000000" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" 
            android:text="@string/female" />
    </RadioGroup>
    
</TableRow>    
  <TableRow
     android:id="@+id/MyRow12"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <View
        android:id="@+id/view4"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_weight="1"
        android:background="#1B9AF7"
        android:paddingBottom="3dp" />

</TableRow>
<TableRow 

    android:id="@+id/MyRow13"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
        <TextView
        android:id="@+id/odema"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_weight="1"
		android:textSize="20sp" 
        android:text="@string/odema"
        android:textColor="#000000" />
        
         <RadioGroup
        android:id="@+id/radioOdeama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:id="@+id/odemayes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" 
            android:textColor="#000000" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/odemano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" 
            android:text="@string/no" />
    </RadioGroup>
        
</TableRow>    
  <TableRow
     android:id="@+id/MyRow14"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <View
        android:id="@+id/view3"
        android:layout_width="fill_parent"
        android:layout_height="0.2dp"
        android:layout_weight="1"
        android:background="#1B9AF7"
        android:paddingBottom="3dp" />

</TableRow>

  <TableRow 

    android:id="@+id/MyRow19"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    
        <TextView
        android:id="@+id/orphan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
		android:layout_weight="1"
		android:textSize="20sp" 
        android:text="@string/orphan"
        android:textColor="#000000" />
        
         <RadioGroup
        android:id="@+id/radioOrphan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" 
            android:textColor="#000000" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000" 
            android:text="@string/no" />
    </RadioGroup>
        
</TableRow>

  

   <TableRow
     android:id="@+id/MyRow15"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent" >
    
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
             android:textColor="#FFFFFF"
             android:background="@drawable/calculate"
             android:text="@string/save" />

</TableRow>

</TableLayout>